# zinc

./: .gitignore  .gitmodules  COPYRIGHT  LICENSE-APACHE  LICENSE-MIT  README.md  zinc.code-workspace
.github/workflows/: rust.yml  zincc.yml
Doc/: allocation_errors.md  type_checking.md
llvm-rs/src/: lib.rs  ty.rs  verifier.rs
llvm_c_2-sys/: build.rs
zinc/: build.zig
zinc/src/: SourceMap.zig  config.zig  debug.zig  main.zig  report.zig  term.zig
zinc/src/parse/: Ast.zig  Lexer.zig  Parser.zig  glue.zig
zinc/src/util/: aiw.zig  clap.zig  clap_parse.zig  util.zig
zinc_src/: ast.zinc  ast_test.zinc  c.zinc  classes.zinc  d.zinc  e.zinc  inline_asm.zinc  mvp.zinc  mvp1.zinc  nameres_test.zinc  parse_test.zinc  parse_test_decl.zinc  parse_test_expr.zinc  pattern_match.zinc  some_test.zinc  str_type.zinc  test_decl_func.zinc  test_lexer.zinc  typer_test.zinc  u8.zinc  zir_test.zinc
zinc_src/old/: ast_test.zinc  parse_test_decl.zinc  parse_test_expr.zinc  parse_test_ty.zinc
zinc_src/parse/: decl.zinc  expr.zinc  literals.zinc
zincc/: Cargo.toml  build.zig  zigmod.yml
zincc/src/: AutoIndentingStream.zig  CodeGen.zig  CodeLens.zig  ast.rs  debug.rs  debug.zig  hir.rs  llvm_c.zig  main.rs  main.zig  name_resolver.rs  nameres.rs  options.rs  report.rs  source_map.rs  term.zig  typer.rs  util.rs  util.zig  zir.rs  zir.zig  zir_test.rs  zir_test.zig
zincc/src/ast/: gen.rs  mod.rs
zincc/src/llvm/: value.rs
zincc/src/old/: ast2.rs  nameres.rs  typer.rs  zir.rs
zincc/src/parse/: !mod.zig  Cst.zig  Lexer.zig  Parser.zig  ast.rs  cst.rs  lexer.rs  mod.rs  parser.rs
zincc/src/parse/parser/: decl.rs  expr.rs  mod.rs  parse.rs  pattern.rs  ty.rs
zincc/src/util/: aiw.rs  file_location.rs  index.rs  mod.rs  mut_cell.rs  progress.rs  time.rs
zincc/src/util/nvec/: base.rs  mod.rs  vec2.rs  vec3.rs
zincs/: err_test.zinc  lex_test.zinc  nameres_test.zinc  parse_test_decl.zinc  parse_test_expr.zinc  parse_test_types.zinc
