[package]
name = "zincc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3.2"

llvm = { path = "../llvm-rs/llvm-rs" }

log = { version = "0.4", features = ["release_max_level_off"] }
tracing = { version = "0.1", features = ["release_max_level_off", "log"] }
fern = { version = "0.6", features = ["colored"] }

colored = "2.0"
atty = "0.2"
ansi-escapes = "0.1"

strum = { version = "0.24", features = ["derive"] }
pathdiff = "0.2"
chrono = "0.4"

# thiserror = "1.0"

[profile.dev]
incremental = true
# opt-level = 1
overflow-checks = false

[profile.release]
incremental = true
overflow-checks = false
